Fix all 11 Java compilation errors blocking build
- Remove unused imports from BookingRepository and PaymentRepository
- Remove unused Payment import from PaymentController
- Remove unused MvcResult variable from BookingControllerIntegrationTest
- Remove setId() calls from BookingServiceImplTest (setters don't exist on @GeneratedValue fields)
- Fix Razorpay SDK API calls: Ordersorders, Paymentspayments (case-sensitive)
- Add PageRequest parameter to PaymentServiceImpl.findByBookingId()
- Fix AuthController return type consistency for RefreshTokenResponseDTO
- Fix refund response type from Payment to void in RazorpayServiceImpl

Build now succeeds: mvn clean package produces working JAR file
All 67 source files compile without errors